@@ -1003,9 +1003,8 @@ Can return nil if the thread no longer exists."
 
 (definterface thread-name (thread)
    "Return the name of THREAD.
-
-Thread names are be single-line strings and are meaningful to the
-user. They do not have to be unique."
+Thread names are short strings meaningful to the user. They do not
+have to be unique."
    (declare (ignore thread))
    "The One True Thread")
 
@@ -1013,16 +1012,6 @@ user. They do not have to be unique."
    "Return a string describing THREAD's state."
    (declare (ignore thread))
    "")
-
-(definterface thread-description (thread)
-  "Return a string describing THREAD."
-  (declare (ignore thread))
-  "")
-
-(definterface set-thread-description (thread description)
-  "Set THREAD's description to DESCRIPTION."
-  (declare (ignore thread description))
-  "")
 
 (definterface thread-attributes (thread)
   "Return a plist of implementation-dependent attributes for THREAD"
